force-app/main/default/objects/Enrollment__c/fields/Grade_Points__c.field-meta.xml
<CustomField>
    <fullName>Grade_Points__c</fullName>
    <formula>CASE(
  TEXT(Grade__c),
  &quot;A+&quot;, 4.0,
  &quot;A&quot;, 4.0,
  &quot;A-&quot;, 3.7,
  &quot;B+&quot;, 3.3,
  &quot;B&quot;, 3.0,
  &quot;B-&quot;, 2.7,
  &quot;C+&quot;, 2.3,
  &quot;C&quot;, 2.0,
  &quot;C-&quot;, 1.7,
  &quot;D+&quot;, 1.3,
  &quot;D&quot;, 1.0,
  &quot;F&quot;, 0.0,
  0.0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grade Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>